feat: refactor mappers to use collect instead of toList and clear lists before adding new items